static/css/custom.css
:root {
    font-family: 'Roboto', sans-serif;
}

.nav {
    --bs-nav-link-color: rgba(0, 0, 0, 0.7);
}

.nav-link {
    padding-top: 0.5rem;
}

.nav-link.active {
    background-image: linear-gradient(to bottom, rgba(13, 109, 253, 0.3) 0%, transparent 30%);
}

/* prevent new line in table's th */
.table td.fit,
.table th.fit {
  white-space: nowrap;
  width: 1%;
}

/* Break bg outside the .container
Source: https://www.youtube.com/watch?v=81pnuZFarRw
#0d6efd - primary
#f8f9fa = bg-body-tertiary
#cfe2ff = bg-primary-subtle
#e9ecef = bg-body-secondary
*/
.bg-fullwidth {
    box-shadow: 0 0 0 100vmax #f8f9fa;
    clip-path: inset(0 -100vmax);
}

.material-symbols-sharp, .custom-material-icon {
    display: inline-flex;
    vertical-align: text-bottom;
    font-size: 1.2rem;
}

.focus-ring-remove {
    --bs-focus-ring-width: 0;
}

/* Add new items form START */
.add-items {
    transition: scale 0.3s cubic-bezier(0.19, 1, 0.22, 1);
    box-shadow: 0px 0px 20px -18px;
}

.add-items:hover {
  border: 2px solid lightgrey;
  box-shadow: 0px 0px 20px -17px;
}

.add-items:active {
  transform: scale(0.99);
}

.add-items:focus {
  border: 2px solid grey;
}
/* Add new items form END */

/* Add items button START
source: https://uiverse.io/Pradeepsaranbishnoi/jolly-robin-0 */

.toggle {
  display: inline-block;
}

.toggle {
  position: relative;
  height: 100px;
  width: 100px;
}

.toggle:before {
  box-shadow: 0;
  border-radius: 84.5px;
  background: #fff;
  position: absolute;
  margin-left: -36px;
  margin-top: -36px;
  opacity: 0.2;
  height: 72px;
  width: 72px;
  left: 50%;
  top: 50%;
}

.toogle input:checked~.label {
  color: rgba(255,0,0,0.8);
}

.toggle .button {
  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
  box-shadow: 0 15px 25px -4px rgba(0, 0, 0, 0.5), inset 0 -3px 4px -1px rgba(0, 0, 0, 0.2), 0 -10px 15px -1px rgba(255, 255, 255, 0.6), inset 0 3px 4px -1px rgba(255, 255, 255, 0.2), inset 0 0 5px 1px rgba(255, 255, 255, 0.8), inset 0 20px 30px 0 rgba(255, 255, 255, 0.2);
  border-radius: 68.8px;
  border: 1px solid #eaeaea;
  position: absolute;
  background: #eaeaea;
  /* changed from  margin-left: -34.4px; */
  margin-left: -45px;
  margin-top: -34.4px;
  display: block;
  height: 68.8px;
  width: 68.8px;
  left: 50%;
  top: 50%;
}

.toggle .label {
  transition: color 300ms ease-out;
  line-height: 101px;
  text-align: center;
  margin-left: -10px;
  position: absolute;
  font-weight: 700;
  font-size: 28px;
  display: block;
  opacity: 0.9;
  height: 100%;
  width: 100%;
  color: rgba(0, 0, 0, 0.9);
}

.toggle input {
  opacity: 0;
  position: absolute;
  cursor: pointer;
  z-index: 1;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
}

.toggle input:active ~ .button {
  filter: blur(0.5px);
  box-shadow: 0 12px 25px -4px rgba(0, 0, 0, 0.4), inset 0 -8px 30px 1px rgba(255, 255, 255, 0.9), 0 -10px 15px -1px rgba(255, 255, 255, 0.6), inset 0 8px 25px 0 rgba(0, 0, 0, 0.4), inset 0 0 10px 1px rgba(255, 255, 255, 0.6);
}

.toggle input:active ~ .label {
  font-size: 26px;
  color: rgba(0, 0, 0, 0.45);
}

.toggle input:checked ~ .button {
  filter: blur(0.5px);
  box-shadow: 0 10px 25px -4px rgba(0, 0, 0, 0.4), inset 0 -8px 25px -1px rgba(255, 255, 255, 0.9), 0 -10px 15px -1px rgba(255, 255, 255, 0.6), inset 0 8px 20px 0 rgba(0, 0, 0, 0.2), inset 0 0 5px 1px rgba(255, 255, 255, 0.6);
}

.toggle input:checked ~ .label {
  color: rgba(0, 0, 0, 0.8);
}
/* Add items button END */


.item-price-card {
  box-sizing: border-box;
  border: 1px solid white;
  backdrop-filter: blur(6px);
  border-radius: 17px;
  cursor: pointer;
  transition: all 0.5s;

}

.item-price-card:hover {
  border: 1px solid black;
  /* Can also use var like so:
  border: 1px solid var(--bs-primary-bg-subtle); */
  transform: scale(1.03);
}

.item-price-card:active {
  transform: scale(0.97) rotateZ(1.7deg);
}

